# kubernetesmanager

./: README.md  install.sh  pyproject.toml
kubernetesmanager/: __init__.py  km.py
kubernetesmanager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
