[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubernetesmanager"
version = "0.1.0"
description = "Interactive Kubernetes shell with folder-like navigation"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.6"
authors = [
    {name = "Kubernetes Manager Team", email = "info@kubernetesmanager.dev"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=5.1",
    "prompt_toolkit>=3.0.0",
]
keywords = ["kubernetes", "kubectl", "shell", "cli", "interactive"]

[project.scripts]
km = "kubernetesmanager.km:main"

[project.urls]
Homepage = "https://github.com/<OWNER>/<REPO>"
Repository = "https://github.com/<OWNER>/<REPO>.git"
Issues = "https://github.com/<OWNER>/<REPO>/issues"
Changelog = "https://github.com/<OWNER>/<REPO>/blob/main/CHANGELOG.md"